# linux-agent

./: README.md  configure  run-rev2agent  snapcraft.yaml  validateConfig.py
AgentStandalone/: generateConfig.py  revtwo.db
AgentStandalone/ARMHF/: userconfig.json
AgentStandalone/ARMHF/gcc-4.9.3/: R2Agent
AgentStandalone/Desktop/: userconfig.json
AgentStandalone/Desktop/gcc-5.4/: revtwo.db
R2AgentApi/: R2AgentApi.h
R2AgentApi/R2AgentApiExample/: R2AgentApiExample.c  buildR2AgentApiExampleARMHF.sh  buildR2AgentApiExampleDesktop.sh
R2AgentApi/R2AgentApiExample/ARMHF/: CMakeLists.txt
R2AgentApi/R2AgentApiExample/Desktop/: CMakeLists.txt
R2AgentApiExample/: R2AgentApiExample.c  buildR2AgentApiExampleARMHF.sh  buildR2AgentApiExampleDesktop.sh
R2AgentApiExample/ARMHF/: CMakeLists.txt
R2AgentApiExample/Desktop/: CMakeLists.txt
R2SnapSamples/: README.md
R2SnapSamples/demo-run-and-terminate-with-consumer/: run-hello-sample
R2SnapSamples/demo-run-as-daemon/: snapcraft.yaml
R2SnapSamples/demo-run-but-do-not-terminate-with-consumer/: snapcraft.yaml
R2SnapSamples/demo-run-on-demand/: snapcraft.yaml
Samples/: README.md
Samples/demo-run-and-terminate-with-consumer/: sample-wrapper-script
Samples/demo-run-as-daemon/: run-rev2agent  snapcraft.yaml
Samples/demo-run-but-do-not-terminate-with-consumer/: sample-wrapper-script
Samples/demo-run-on-demand/: snapcraft.yaml
